# pickett

./: .gitignore  CMakeLists.txt  Makefile  binary_tree.c  blas.c  blas.h  calbak.c  calcat.c  calcat.cpp  calfit.c  calfitno.c  calfitno.cpp  calmrg.c  calpgm.h  calpgm.h.gch  catform.c  catform.cpp  catlist.c  catlist.cpp  catread.c  catread.cpp  catread.h  catutil.c  catutil.h  cblas.h  cmake_install.cmake  cnjj.c  cnjj.h  cnjj.h.gch  cnvir.c  cyanomethcycloprop_gs_A_I.res  cyanomethcycloprop_gs_S_I.res  dblas.c  dpi.c  dpix.c  fdate.c  fdate.cpp  fileops.cpp  flexfit.c  flexops.c  (+37 more)
